# AbstractRequests

./: CMakeLists.txt  README.md
src/: main.cpp
src/AbstractRequests/: abstractrequests.h
